--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Rosen">
     <link type="text/css" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" >
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <title>MMALL ADMIN</title>
+    <title>TMAC ADMIN</title>
 </head>
 <body>
     <div id="app"></div>
